# multimodel_demo_stend

./: .env  .gitignore  README.md  draft.ipynb  pyproject.toml  utils.py
cert/: self_signed_certificate.pem
data/: X_oot.csv  data_for_model.csv  personal_info.csv
src/: __init__.py  app.py
src/.streamlit/: secrets.toml
src/pages/: 1_client_profile.py  2_portfolio.py  client_profile.py  main.py  portfolio.py
