[project]
name = "multimodel-demo"
version = "0.1.0"
description = "Multimodel demo project"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "clearml",
    "requests",
    "python-dotenv>=0.9.9",
    "openai>=1.75.0",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 
